# learning_haskell

./: Ex310.hs  Ex410.hs  Ex510.hs  Ex520.hs  FileRead.hs
Lab1/: Histogram.hs  LICENSE  Lab1.cabal  Lab1.hs
